# toy-flet-gh-pages

./: .gitignore  README.md  myuv.cmd  pyproject.toml  run_flet.py
.github/workflows/: build-deploy.yaml
my_app/: app.py
